fix : goodsDetail Page

--- a/src/main/resources/static/css/goodsDetail.css
+++ b/src/main/resources/static/css/goodsDetail.css
@@ -1,19 +1,14 @@
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css');
-
-
 li{
     list-style-type: none;
 }
-body{
-    width:1000px;
-    text-align : center;
-    margin:0 auto;
-    flex-direction:column;
-    font-family: 'Pretendard Variable';
+.main-container {
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
 }
-div{
+/*div{
 	border:1px solid;
-}
+}*/
 div.top-row{
     display:flex;
     justify-content: space-between;
@@ -50,12 +45,13 @@ select{
     font-size:16px;
     margin-right:5px;
     margin-bottom:5px;
-    border:1px solid #3d56b2;
     background-color: transparent;
     border-radius:4px;
+    /*border:1px solid #3d56b2;*/
 }
 .item-delete{
 	height:32px;
+	margin-bottom: 3px;
 }
 #thumbnail-box{
 	width:400px;
@@ -71,37 +67,59 @@ select{
 }
 #detail{
     width:400px;
-    border:1px solid #3d56b2;
     font-size:20px;
     margin-top:10px;
     border-radius:4px;
     height:auto;
     text-align: left;
+    /*border:1px solid #3d56b2;*/
 }
 #row>#left>#detail{
     margin-top:20px;
     margin-bottom:20px;
 }
-#goods-explanation{
+/*#goods-explanation{
     border:1px solid;
-}
-
-#cal-name{
-    width:500px;
+}*/
+.cal-name{
+    width:550px;
     height:30px;
-    border: 1px solid;
-    display:flex;
+    display:block;
     flex-direction: column;
     margin-bottom: 5px;
+    /*border: 1px solid;*/
 }
 #total-goods{
-	width:290px;
+	width:270px;
+	float:left;
 }
 #total-price{
-	width:290px;
+	width:270px;
+	float:right;
+	text-align:right;
+}
+#delivery{
+	width:270px;
+	float:left;
+}
+#delivery-price{
+	width:270px;
+	float:right;
+	text-align:right;
+}
+#total-pay-amount{
+	width:270px;
+	float:left;
+}
+#total-pay-amount-price{
+	width:270px;
+	float:right;
+	text-align:right;
 }
 #API-icon{
-    border:1px solid;
+	width:100px;
+	float:right;
+    /*border:1px solid;*/
 }
 .option-container{
     display: flex;
@@ -117,6 +135,9 @@ select{
 }
 #seller-container{
 	height:40px;
+	display: flex;
+	justify-content: left;
+	align-items: center;
 }
 #profile{
 	float:left;
@@ -126,10 +147,11 @@ select{
 }
 #seller-name{
     text-align: left;
-    font-size: 150%; 
+    font-size: 20px 
     margin-bottom:20px;
 }
 #goods-explanation{
     width:1000px;
     text-align: center;
 }
+#kakaopay {
