--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -1,19 +1,11 @@
-@charset "UTF-8";
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
-/*
-body {
- 
-   font-family: "Pretendard Variable";
-}
-*/
 .main-container{
 	/*background-color: red;*/
 	flex-direction: column;
 	
 }
 
-div {
+.main-container>div {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -97,7 +89,7 @@ select {
   width: 200px;
   text-align: left;
   margin-left: 0px;
-  
+  margin-right: 50px;
 }
 
 #endDateTxt {
@@ -222,6 +214,11 @@ li {
 }
 
 /* 정산받을 계좌 정보 */
+#bank-category {
+	width: 100px;
+	height: 44px;	
+}
+
 #bankAccountNumber {
   width: 390px;
   color : #3D56B2;
