--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -1,11 +1,19 @@
+@charset "UTF-8";
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
+/*
+body {
+ 
+   font-family: "Pretendard Variable";
+}
+*/
 .main-container{
 	/*background-color: red;*/
 	flex-direction: column;
 	
 }
 
-.main-container>div {
+div {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -89,7 +97,7 @@ select {
   width: 200px;
   text-align: left;
   margin-left: 0px;
-  margin-right: 50px;
+  
 }
 
 #endDateTxt {
@@ -179,8 +187,13 @@ ul {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   padding: 20px;
 }
+.listItemName{
+	width : 450px;
+	height: 40px;
+	
+}
 li {
-  background-color: #415F9D;
+
   
 }
 .items {
@@ -214,13 +227,8 @@ li {
 }
 
 /* 정산받을 계좌 정보 */
-#bank-category {
-	width: 100px;
-	height: 44px;	
-}
-
 #bankAccountNumber {
-  width: 390px;
+  width: 380px;
   color : #3D56B2;
 	border : 1px solid #3D56B2;
 	border-radius : 5px;
