--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -33,9 +33,7 @@ header {
 	font-weight : 600;
 }
 
-
-
-.main-dropdown {
+.main-dropdown, .login-container {
  	position: absolute;
  	
 	display: flex;
@@ -44,6 +42,28 @@ header {
  	
 	left : 93%;
  	height : 65px;
+}
+
+.login-container {
+	left: 86.5%;
+	width: 150px;
+	height: 45px;
+	flex-direction: row;
+	font-size: 14px;
+	border: 1px solid #3D56B2;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.login-img {
+	width: 30px;
+	height: 30px;
+	margin-right: 5px;
+}
+
+.login-img>img {
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .main-dropdown-button {
@@ -101,26 +121,44 @@ body {
 	font-family: "Pretendard Variable";
 	margin : 0px;
 	background: #FFFFFF;
+	padding-bottom: 80px;
+	position: relative;
 }
 
 .main-container {
 	width : 1440px;
+	height: auto;
+	min-height: 100%;
 	display: flex;
     margin: 0 auto;
-    min-height: calc(100% - 120px);
+	padding-bottom: 80px;
+}
+
+#wrap{
+	min-height: 100%;
+	position: relative;
 }
 
 /* =======================================footer========================================*/
 footer {
-/*   background-color: #462c91; */
-	font-family: "Pretendard Variable";
+	height: 80px;
 	background-color: #FFFFFF;
 	padding: 10px;
+	padding-top: 25px;
 	margin-top: 50px;
 	text-align: center;
-	text-decoration : none;
+	text-decoration: none;
 	color: #686868;
 	font-size: 18px;
+	/* position: absolute;
+  	bottom: 0; */
+  	position : fixed;
+  	/* transform : translateY(-100%); */
+  	left: 0;
+	right: 0;
+	bottom: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .footer-image {
@@ -217,7 +255,9 @@ footer {
     margin-bottom: 8px;
 }
 #current-title {
-    font-weight: 600;
+    font-weight: 700;
+    font-color: #3D56B2;
+    font-size: 22px;
 }
 
 
