--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -1,16 +1,13 @@
 @charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
-/*
-body {
- 
-   font-family: "Pretendard Variable";
+footer {
+	position: absolute;
 }
-*/
+
 .main-container{
 	/*background-color: red;*/
 	flex-direction: column;
-	
 }
 
 div {
