--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -6,18 +6,27 @@ body {
 display: flex;
 align-items: center;
 justify-content: center;
+margin: 0 auto;
 }
 
 .container {
-    width: 400px;
+    width: 500px;
+    height: auto;
     margin: 0 auto;
-    margin-top: 10px;
-    padding: 20px;
+    margin-top: 12.5px;
+    padding: 25px;
     /* border: 1px solid #ccc; */
     border-radius: 5px;
 }
 
 .container h1 {
+    font-size: 270%;
+    text-align: center;
+    color: #005691;
+}
+
+.container a {
+    font-size: 15px;
     text-align: center;
     color: #005691;
 }
@@ -27,8 +36,8 @@ justify-content: center;
 .container input[type="number"],
 .container input[type=email] {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 15px 25px;
+    margin: 10px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
@@ -37,11 +46,12 @@ justify-content: center;
 .container button {
     background-color: #005691;
     color: #E8F1F5;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 17px 25px;
+    margin: 10px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    font-size: 18px;
 }
 
 .container button:hover {
@@ -51,62 +61,5 @@ justify-content: center;
 .input-wrapper {
 display: grid;
 grid-template-columns: 1fr 1fr;
-gap: 10px;
+gap: 12.5px;
 }
-
-/* radio design */
-/* .radio{
-margin-left: 4em;
-}
-input[type="radio"]{
-display: none;
-}
-.radio label::before{
-content: "";
-display: inline-block;
-height: 1em;
-width: 1em;
-border: 2px solid #1baf89;
-border-radius: 50%;
-margin-right: 9px;
-}
-.radio label::after{
-content: "";
-display: inline-block;
-height: 0.8em;
-width: 0.8em;
-background-color: #1baf89;
-border-radius: 50%;
-}
-.radio label{
-position: relative;
-left: 1.5em;
-cursor: pointer;
-}
-.radio label::before,
-.radio label::after{
-position: absolute;
-left: -1.5em;
-}
-.radio label::after{
-bottom: 12px;
-left: -1.3em;
-}
-.radio label::after {
-    content: none;
-}
-input[type="radio"]:checked + label::after{
-    content: "";
-} */
-
-/* 남여 선택 수정할 css */
-/* #comment,select,input[type=text],[type=email],[type=number]{
-outline: none;
-height: 3em;
-max-width: 480px;
-background-color: inherit;
-padding: 0.25em 0 0 0.25;
-border: none;
-border-bottom: 3.4px solid #1baf89; 
-font-size: 0.8em;
-} */
