--- a/src/main/resources/static/css/alarmedGoods.css
+++ b/src/main/resources/static/css/alarmedGoods.css
@@ -1,4 +1,3 @@
-
 /* 본문 */ 
 .main-content {
     width: 1200px;
@@ -17,114 +16,106 @@
     font-weight: 600;
 }
 
-.card-container {
-	height: 500px;
-	border: 1px solid black;
-}
-
-/* card-btn */
-.main-card-btn {
-	background: #005691;
-	border-radius: 5px;
-	box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
-	color: #ffffff;
-	display: inline-block;
-	position: relative;
-	text-decoration: none;
-	transition: all 0.1s 0s ease-out;
+/* card */
+.cards-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
 }
   
-.main-card-btn:active {
-	/* 클릭하면 변하는 색 */
-	background: #3D56B2;
-	box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.25);
-	transform: translate3d(0, 1px, 0);
-	transition: all 0.025s 0s ease-out;
-}
-  
-.main-cards {
-	max-width: 1440px;
-	margin: 0 auto;
-}
-  
-.main-card {
-	background: #ffffff;
-	
-	display: inline-block;
-	
-	margin : 0px 25px 20px 25px;
-	
-	max-width: 300px;
-	position: relative;
-	text-align: left;
-	transition: all 0.3s 0s ease-in;
-	width: 300px;
-	z-index: 1;
+.card {
+    width: 300px;
+    height: 500px;
+    background: #ffffff;
+    margin : 0px 25px 20px 25px;
+    text-align: left;
+    transition: all 0.3s 0s ease-in;
+    z-index: 1;
+    border : 1px solid #d3d3d3;
 }
 
-.card img {
-	max-width: 300px;
+.card-top {
+    width: 300px;
+    height: 300px;    
+    display : flex;
+    justify-content : center;
+    align-items : center;
+    overflow : hidden;
 }
 
-.main-card-image-holder {
-	overflow : hidden;
-	
-	display : flex;
-	justify-content : center;
-	align-items : center;
+.card-image {
+    max-width: 100%;
+    max-height: 100%;
 }
 
-
-.main-card-title-contianer-total{
-	border-left : 1px solid #d3d3d3;
-	border-right : 1px solid #d3d3d3;
-	border-bottom : 1px solid #d3d3d3;	
+.card-bottom {
+    width: 300px;
+    height: 200px;
+    border-left : 1px solid #d3d3d3;
+    border-right : 1px solid #d3d3d3;
+    border-bottom : 1px solid #d3d3d3;
 }
 
-.main-card-title-container {
-	display : flex;
-	
-	background: #ffffff;
-	position: relative;
-	z-index: 0;
-	
-	padding-top : 10px
-  }
-  
-.main-card-title {
-	padding-left : 10px;
-	width : 250px;
+.card-title-container {
+    height: 80px;
+    display : flex;
+    background: #ffffff;
+    margin: 0 10px;
 }
 
-.main-card-title-big {
-	font-weight : 700;
-	font-size : 24px;
+.card-title {
+    width: 230px;
+    height: 90px;
+    display: flex;
+    flex-direction: column;
+    width : 250px;
+    font-weight : 700;
+    font-size : 22px;
+    margin-top: 10px;
 }
 
-.main-card-title-small {
-	font-weight : 500;
-	font-size : 15px;
+.alarm-btn {
+    width: 40px;
+    height: 40px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 22px;
+    border-radius: 70%;
 }
 
-.main-card-btn-container {
-	margin-right : 10px;
-	width : 50px;
+.bell-btn {
+	color: #eedf10;
 }
-  
-.main-card-btn {
-	width : 45px;
-	height : 45px;
-	
-	border-radius : 50%;
-	
-	display : flex;
-	justify-content : center;
-	align-items : center;
-}
-  
 
-.main-card-description {
-	margin : 10px 0px;
-	padding: 0 10px;
-	font-size: 14px;
+.category-and-rate {
+    height: 20px;
+    font-weight: 500;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.bar {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.rate {
+    color: #3d4ee7;
+}
+
+.card-description {
+    height : 90px;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
