--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,31 +1,46 @@
 footer {
 	position: absolute;
 }
+.content {
+	background: linear-gradient( white, white, #eff1f9d7);
+	border-top: 2px solid #efefef;
+}
+.footer-container{
+	background-color: #eff1f9d7;
+}
 
 .main-container {
     flex-direction: column;
+    background-color: white;
 }
 
 .top {
     display: flex;
     margin: 0 auto;
+    margin-top: 30px;
     /* align-items: center; */
-    margin-top: 25px;
-    margin-bottom: 20px;
+    /*margin-top: 25px; */
+    margin-bottom: 30px;
 }
 
 .top-left {
     width: 250px;
     height: 250px;
-    background-color: #415F9D;
-    border-radius: 70%;
+    border: 1px solid #415F9D;
+    border-radius: 100%;
     overflow: hidden;
+    margin-right: 50px;
 }
 
 .profile-img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+    transition: all 0.2s linear;
+}
+.profile-img:hover{
+	transform: scale(1.25);
+	overflow: hidden;
 }
 
 .top-right {
@@ -63,112 +78,15 @@ hr {
 
 .dropdown-select {
     margin-top: 20px;
+    font-family: "Pretendard Variable";
 }
 
 .ongoing-select {
-    width: 90px;
+    width: 100px;
     height: 30px;
-    margin-left: 30px;
+    margin-left: 45px;
 }
 
-/* card */
-  
-.cards-container {
-	max-width: 1440px;
-	margin: 0 auto;
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-}
-  
 .card {
-    width: 300px;
-    height: 500px;
-	background: #ffffff;
-	margin : 0px 25px 20px 25px;
-	text-align: left;
-	transition: all 0.3s 0s ease-in;
-	z-index: 1;
-	border: 1px solid #d3d3d3;
-}
-
-.card-top {
-    width: 300px;
-    height: 300px;	
-	display : flex;
-	justify-content : center;
-	align-items : center;
-    overflow : hidden;
-}
-
-.card-image {
-	max-width: 100%;
-    max-height: 100%;
-}
-
-.card-bottom {
-    width: 300px;
-    height: 200px;
-}
-
-.card-title-container {
-    height: 80px;
-	display : flex;
-	background: #ffffff;
-    margin: 0 10px;
-}
-
-.card-title {
-    width: 230px;
-    height: 90px;
-    display: flex;
-    flex-direction: column;
-	width : 250px;
-    font-weight : 700;
-	font-size : 22px;
-    margin-top: 10px;
-}
- 
-.heart-btn {
-	width: 40px;
-	height: 40px;
-	margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-	text-decoration: none;
-	font-size: 22px;
-	border-radius: 70%;
-}
-
-.heart-icon {
-	color: #ee281a;
-}
-
-.category-and-rate {
-    height: 20px;
-    font-weight: 500;
-    font-size: 14px;
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.bar {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.rate {
-    color: #3d4ee7;
-}
-
-.card-description {
-    height : 90px;
-	font-size: 16px;
-    margin-left: 10px;
-    margin-right: 10px;
+	margin-bottom: 50px;
 }
