--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -131,18 +131,19 @@ button {
 
 /* 상품정보입력 */
 #itemInfoForm {
-  background-color: #7788c9;
+  background-color: #ececec;
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 #itemInputBox {
-  background-color: #f2f3f7;
+  background-color: white;
   opacity: 1.0;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   width: 500px;
+  padding-right: 47px;
 }
 .itemForm {
   width: 400px;
@@ -158,7 +159,7 @@ button {
   color: rgb(225, 0, 0);
 }
 #itemSubmit {
-  margin-left: 470px;
+  margin-left: 490px;
 }
 #itemSubmitInput {
   width: 70px;
@@ -192,7 +193,7 @@ button {
 /* 상품 구성 리스트 */
 ul {
   list-style-type: none;
-  background-color: #7788c9;
+  background-color: #415F9D;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   padding: 20px;
