fix: main.css, query, date format

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -124,6 +124,8 @@ body {
 	padding-bottom: 80px;
 	position: relative;
 	min-height: 1080px;
+	display: flex;
+	flex-direction: column;
 }
 
 .main-container {
@@ -131,7 +133,6 @@ body {
 	min-height: 100vh;
 	display: flex;
     margin: 0 auto;
-    margin-top: 20px;
 	padding-bottom: 80px;
 }
 
