--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -193,11 +193,16 @@ button {
 /* 상품 구성 리스트 */
 ul {
   list-style-type: none;
-  background-color: #415F9D;
+  background-color: #3D56B2;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   padding: 20px;
 }
+
+#itemList {
+    display: none;
+  }
+  
 .listItemName{
 	width : 450px;
 	height: 40px;
