--- a/src/main/resources/static/css/alarmedGoods.css
+++ b/src/main/resources/static/css/alarmedGoods.css
@@ -11,7 +11,7 @@
 
 .title {
     display: block;
-    margin-bottom: 10px;
+    margin : 10px 0px 10px 40px;
     font-size: 34px;
     font-weight: 600;
 }
